# progetto-dati-falsi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test.py
generatore/: __init__.py  dati.py  funzioni.py
