[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "generatore"
version = "0.0.6"
description = "Un pacchetto per generare nomi casuali per il corso Python."
authors = [{ name = "Domenico Santo", email = "domenicosanto.dev@gmail.com" },]

[tool.setuptools]
packages = ["generatore"]